of incorrect Ǆungla).

*** Characters which turn into multiple ones when cased are correctly handled.
For example, ﬁ ligature is converted to FI when upper cased.

*** Greek small sigma is correctly handled when at the end of the word.
Strings such as ΌΣΟΣ are now correctly converted to Όσος when
capitalized instead of incorrect Όσοσ (compare lowercase sigma at the
end of the word).


* Changes in Specialized Modes and Packages in Emacs 26.1

*** Info menu and index completion uses substring completion by default.
This can be customized via the `info-menu` category in
completion-category-override.

+++
*** The ancestor buffer is shown by default in 3way merges.
A new option ediff-show-ancestor and a new toggle
ediff-toggle-show-ancestor.

** TeX: Add luatex and xetex as alternatives to pdftex

** Electric-Buffer-menu

+++
*** Key 'U' is bound to 'Buffer-menu-unmark-all' and key 'M-DEL' is
bound to 'Buffer-menu-unmark-all-buffers'.

** bs

---
*** Two new commands 'bs-unmark-all', bound to 'U', and
'bs-unmark-previous', bound to <backspace>.

** Buffer-menu

+++
*** Two new commands 'Buffer-menu-unmark-all', bound to 'U' and
'Buffer-menu-unmark-all-buffers', bound to 'M-DEL'.

** Gnus

---
*** The .newsrc file will now only be saved if the native select
method is an NNTP select method.

+++
*** A new command for sorting articles by readedness marks has been
added: 'C-c C-s C-m C-m'.

** Ibuffer

---
*** New command 'ibuffer-jump'.

---
*** New filter commands 'ibuffer-filter-by-basename',
'ibuffer-filter-by-file-extension', 'ibuffer-filter-by-directory',
'ibuffer-filter-by-starred-name', 'ibuffer-filter-by-modified'
and 'ibuffer-filter-by-visiting-file'; bound respectively
to '/b', '/.', '//', '/*', '/i' and '/v'.

---
*** Two new commands 'ibuffer-filter-chosen-by-completion'
and 'ibuffer-and-filter', the second bound to '/&'.

---
*** The commands 'ibuffer-pop-filter', 'ibuffer-pop-filter-group',